syntax = "proto3";

package location;

// The Location message
message Location {
    int32 id = 1;
    int32 person_id = 2;
    string longitude = 3;
    string latitude = 4;
    string creation_time = 5;
}

// The service that handles location operations
service LocationService {
    // RPC to create a location
    rpc CreateLocation (Location) returns (Location);
    // RPC to get a location by ID
    rpc GetLocation (Location) returns (Location);
}